<resources>
    <string name="app_name">Crystal Clicker</string>
    <string name="coin" translatable="false"> </string>
    <string name="comboName" translatable="false">Combo:</string>
    <string name="cookies">Cookies clicked</string>
    <string name="title_activity_upgrades">Upgrades</string>
    <string name="achievements_button">Achievements</string>
    <string name="abilities_button" translatable="false"> </string>
    <string name="upgrade_button">Upgrade</string>
    <string name="upgradelvltext">Current lvl: </string>
    <string name="upgradelvlcost">Next lvl cost: </string>
    //upgrades functions
    <string name="not_enough">You don\'t have enough crystals</string>
    <string name="upgraded">Upgraded!</string>

    //upgrade1
    <string name="upgrade1name">Magic tap</string>
    <string name="upgrade1lvltext" translatable="false">Current lvl: </string>
    <string name="upgrade1lvlcost" translatable="false">Next lvl cost: </string>
    <string name="upgrade1desc">Adds additional crystals per tap</string>
    //upgrade2
    <string name="upgrade2name">Combo tap</string>
    <string name="upgrade2lvltext" translatable="false">Current lvl: </string>
    <string name="upgrade2lvlcost" translatable="false">Next lvl cost: </string>
    <string name="upgrade2desc">Adds additional combo point per tap</string>
    //upgrade3
    <string name="upgrade3name">Combo ticker</string>
    <string name="upgrade3lvltext" translatable="false">Current lvl: </string>
    <string name="upgrade3lvlcost" translatable="false">Next lvl cost: </string>
    <string name="upgrade3desc">Speeds up tick rate of combo</string>

    <string name="button_upgrade" translatable="false">Upgrade click multiplier</string>
    <string name="button_upgrade_combo_tick" translatable="false">Upgrade combo tick rate</string>
    <string name="button_upgrade_combo_multiplier" translatable="false">Upgrade combo multiplier</string>
    //settings
    <string name="settings">Settings</string>
    <string name="exitapp">Exit app</string>
    <string name="soundswitch">Sounds</string>
    <string name="animswitch">Animations</string>
    <string name="langswitch">Language change</string>

    <string name="soundon">Sound is on</string>
    <string name="soundoff">Sound is off</string>

    <string name="animon">Animations are on</string>
    <string name="animoff">Animations are off</string>

    <string name="english">English</string>
    <string name="polish">Polish</string>

    //achievements
    <string name="ach_first">First tapped!</string>
    <string name="ach_first_desc">You tapped for the first time!</string>

    <string name="ach_1000">1000 Crystals</string>
    <string name="ach_1000_desc">You got 1000 crystals stored!</string>

    <string name="ach_10000">10000 Crystals</string>
    <string name="ach_10000_desc">You got 10000 crystals stored!</string>

    <string name="ach_100000">100000 Crystals</string>
    <string name="ach_100000_desc">You got 100000 crystals stored!</string>

    <string name="ach_1000000">1000000 Crystals</string>
    <string name="ach_1000000_desc">You got 1000000 crystals stored!</string>

    <string name="ach_up1_5">Tap lvl 5</string>
    <string name="ach_up1_5_desc">You upgraded tapping to lvl 5!</string>

    <string name="ach_up1_10">Tap lvl 10</string>
    <string name="ach_up1_10_desc">You upgraded tapping to lvl 10!</string>

    <string name="ach_up1_15">Tap lvl 15</string>
    <string name="ach_up1_15_desc">You upgraded tapping to lvl 15!</string>

    <string name="ach_up1_20">Tap lvl 20</string>
    <string name="ach_up1_20_desc">You upgraded tapping to lvl 20!</string>

    <string name="ach_up2_5">Combo lvl 5</string>
    <string name="ach_up2_5_desc">You upgraded combo to lvl 5!</string>

    <string name="ach_up2_10">Combo lvl 10</string>
    <string name="ach_up2_10_desc">You upgraded combo to lvl 10!</string>

    <string name="ach_up2_15">Combo lvl 15</string>
    <string name="ach_up2_15_desc">You upgraded combo to lvl 15!</string>

    <string name="ach_up2_20">Combo lvl 20</string>
    <string name="ach_up2_20_desc">You upgraded combo to lvl 20!</string>

    <string name="ach_up3_5">Tickrate lvl 5</string>
    <string name="ach_up3_5_desc">You upgraded tickrate to lvl 5!</string>

    <string name="ach_up3_10">Tickrate lvl 10</string>
    <string name="ach_up3_10_desc">You upgraded tickrate to lvl 10!</string>

    <string name="ach_up3_15">Tickrate lvl 15</string>
    <string name="ach_up3_15_desc">You upgraded tickrate to lvl 15!</string>

    <string name="ach_up3_20">Tickrate lvl 20</string>
    <string name="ach_up3_20_desc">You upgraded tickrate to lvl 20!</string>

    <string name="ach_all">Crsytal King</string>
    <string name="ach_all_desc">You\'ve unlocked all achievements!</string>
    <string name="ach_unl">Achievement Unlocked!</string>
    <string name="up_max">Max lvl reached!</string>
</resources>