<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_settings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/mainBackground3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg7" />

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="369dp"
        android:background="@drawable/bg9"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minHeight="48dp"
            android:splitTrack="true"
            android:text="@string/soundswitch"
            android:textColor="#FFFFFF"
            tools:checked="true" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minHeight="48dp"
            android:splitTrack="true"
            android:text="@string/animswitch"
            android:textColor="#FFFFFF"
            tools:checked="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/langswitch"
            android:textColor="#FFFFFF" />

        <Switch
            android:id="@+id/langSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Switch"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>