<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEBBC"
    tools:context=".MainActivity"
    android:noHistory="true">

    <TextView
        android:id="@+id/textowo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textColorLink="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/cookie"
        android:layout_width="218dp"
        android:layout_height="212dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textowo"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/cookie_click"
        tools:srcCompat="@drawable/cookie_click" />

    <TextView
        android:id="@+id/comboView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textowo"
        app:layout_constraintVertical_bias="0.058"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/comboName"
        app:layout_constraintBottom_toTopOf="@+id/comboView"
        app:layout_constraintEnd_toStartOf="@+id/textowo"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cookies"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textowo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="96dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="4dp"
        android:gravity="center|center_horizontal|top"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_upgrade4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTintMode="add"
            android:stateListAnimator="@android:anim/bounce_interpolator"
            android:text="@string/achievements_button"
            app:backgroundTint="#5DA7AE"
            tools:text="@string/achievements_button" />

        <Button
            android:id="@+id/button_upgrade"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTintMode="add"
            android:stateListAnimator="@android:anim/bounce_interpolator"
            android:text="@string/title_activity_upgrades"
            app:backgroundTint="#5DA7AE"
            tools:text="@string/title_activity_upgrades" />

        <Button
            android:id="@+id/button_upgrade5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTintMode="add"
            android:stateListAnimator="@android:anim/bounce_interpolator"
            android:text="@string/abilities_button"
            app:backgroundTint="#5DA7AE"
            tools:text="@string/abilities_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:id="@+id/id1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#543D46"
            tools:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/upgrade_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/title_activity_upgrades"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button_upgrade1"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:stateListAnimator="@android:anim/bounce_interpolator"
                    android:text="@string/button_upgrade"
                    app:backgroundTint="#5DA7AE"
                    app:icon="@android:drawable/stat_sys_upload_done" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/upgrade1_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/upgrade1lvltext"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/white"
                            tools:text="@string/upgrade1lvltext" />

                        <TextView
                            android:id="@+id/upgrade1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/upgrade1_text3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upgrade1lvlcost"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/white"
                            tools:text="@string/upgrade1lvlcost" />

                        <TextView
                            android:id="@+id/upgrade1_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button_upgrade2"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:text="@string/button_upgrade_combo_multiplier"
                    app:backgroundTint="#5DA7AE"
                    app:icon="@android:drawable/stat_sys_upload_done" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/upgrade2_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upgrade2lvltext"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/white"
                            tools:text="@string/upgrade2lvltext" />

                        <TextView
                            android:id="@+id/upgrade2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/upgrade2_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upgrade2lvlcost"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/white"
                            tools:text="@string/upgrade2lvlcost" />

                        <TextView
                            android:id="@+id/upgrade2_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/button_upgrade3"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTintMode="add"
                    android:text="@string/button_upgrade_combo_tick"
                    app:backgroundTint="#5DA7AE"
                    app:icon="@android:drawable/stat_sys_upload_done" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/upgrade3_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upgrade3lvltext"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/white"
                            tools:text="@string/upgrade3lvltext" />

                        <TextView
                            android:id="@+id/upgrade3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/upgrade3_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upgrade3lvlcost"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/white"
                            tools:text="@string/upgrade3lvlcost" />

                        <TextView
                            android:id="@+id/upgrade3_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/id2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#543D46">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    app:cardBackgroundColor="#857171"
                    app:cardCornerRadius="4dp">

                    <TextView
                        android:id="@+id/info_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        tools:text="SampleText" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>